# lake

./: CMakeLists.txt  LICENSE  README.md
include/lake/: array.hpp  extras.hpp  fixed_array.hpp  hash.hpp  iterator.hpp  optional.hpp  span.hpp  string_view.hpp  type_traits.hpp  types.hpp  unique_ptr.hpp  vector.hpp
meta/cmake/: googletest.cmake
src/: CMakeLists.txt  string_view.cpp
test/: CMakeLists.txt  test_array.cpp  test_extras.cpp  test_fixed_array.cpp  test_hash.cpp  test_optional.cpp  test_span.cpp  test_string_view.cpp  test_unique_ptr.cpp  test_vector.cpp  utils.hpp
